[package]
authors = ["inkhare <iapricot@foxmail.com>"]
description = "A iptables bindings for Rust."
edition = "2018"
keywords = ["iptables", "netfilter", "bindings"]
license = "MIT OR Apache-2.0"
name = "rust-iptables"
readme = "README.md"
version = "0.0.2"
repository = "https://github.com/ostraca/rust-iptables"

[dependencies]
lazy_static = "1.4"
regex = "1.4"
nix = "0.20"

[[example]]
name = "table"
path = "examples/table.rs"
